feat: Get native plugins and native builds working (tested only on mac)